Add token_lifespan_days field to dynamically take in number of days from webui request
